--- a/index.html
+++ b/index.html
@@ -4,13 +4,20 @@
     <meta charset="utf-8">
     <title>USA 2020</title>
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   </head>
   <body>
     <!-- inizio header -->
     <header>
       <!-- inizio menu -->
       <nav>
-        
+        <ul class="menu">
+          <li><a href="#"><img class="logo" src="img/logo.jpg" alt="logo"></a></li>
+          <li><a href="#">Joe Biden</a></li>
+          <li><a href="#">Donald Trump</a></li>
+          <li><a href="#">Jo Jorgensen</a></li>
+          <li><a href="#">Howie Hawkins</a></li>
+        </ul>
       </nav>
       <!-- fine menu -->
     </header>
