--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <!-- inizio menu -->
       <nav>
         <ul class="menu">
-          <li><a href="#"><img class="logo" src="img/logo.jpg" alt="logo"></a></li>
+          <li><a href="#"><img class="logo" src="https://images-na.ssl-images-amazon.com/images/I/61gnrswHuBL._AC_SL1024_.jpg" alt="logo"></a></li>
           <li><a href="#">Joe Biden</a></li>
           <li><a href="#">Donald Trump</a></li>
           <li><a href="#">Jo Jorgensen</a></li>
@@ -24,7 +24,13 @@
     <!-- fine header -->
     <!-- inizio main -->
     <main>
-
+      <div class="container">
+        <!-- inizio biden -->
+        <div class="box">
+          <img src="https://images.hdqwalls.com/wallpapers/joe-biden-ea.jpg" alt="biden">
+        </div>
+        <!-- fine biden -->
+      </div>
     </main>
     <!-- fine main -->
     <!-- inizio footer -->
@@ -32,6 +38,5 @@
 
     </footer>
     <!-- fine footer -->
-
   </body>
 </html>
