--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@
     <main>
       <div class="container">
         <!-- inizio biden -->
-        <div class="box">
-          <img src="https://images.hdqwalls.com/wallpapers/joe-biden-ea.jpg" alt="biden">
+        <div class="box biden">
+          <div class="layover">
+            
+          </div>
         </div>
         <!-- fine biden -->
       </div>
