--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <!-- inizio biden -->
         <div class="box biden">
           <div class="layover">
-            
+            <h2>Joe Biden</h2>
           </div>
         </div>
         <!-- fine biden -->
