--- a/index.html
+++ b/index.html
@@ -32,6 +32,27 @@
           </div>
         </div>
         <!-- fine biden -->
+        <!-- inizio trump -->
+        <div class="box trump">
+          <div class="layover">
+            <h2>Donald Trump</h2>
+          </div>
+        </div>
+        <!-- fine trump -->
+        <!-- inizio jorgensen -->
+        <div class="box jorgensen">
+          <div class="layover">
+            <h2>Jo Jorgensen</h2>
+          </div>
+        </div>
+        <!-- fine jorgensen -->
+        <!-- inizio hawkins -->
+        <div class="box hawkins">
+          <div class="layover">
+            <h2>Howie Hawkins</h2>
+          </div>
+        </div>
+        <!-- fine hawkins -->
       </div>
     </main>
     <!-- fine main -->
