--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <!-- fine main -->
     <!-- inizio footer -->
     <footer>
-
+      <p><strong>Site</strong> powered by Giorgio</p>
     </footer>
     <!-- fine footer -->
   </body>
